# online-pruners

./: .gitignore  CMakeLists.txt  README.md  compile.sh  exp_linear.cpp  experiment_prune_binary_mnist.cpp  experiment_prune_mnist.cpp  loading-test.cpp  train.py  train_binary_mnist.py  train_binary_mnist_linear.py
.github/workflows/: cmake.yml
include/: utils.h
include/experiment/: Database.h  Experiment.h
include/nn/: synced_neuron.h  synced_synapse.h  utils.h
include/nn/networks/: pretrained_dense_network.h  small_network.h  small_test_network.h  synced_network.h
models/: cnn.py  fc_net.py  fc_net_linear.py  fc_net_single_output.py
pybind_interface/: interface.cpp
src/: utils.cpp
src/experiment/: Database.cpp
src/nn/: synced_neuron.cpp  synced_synapse.cpp  utils.cpp
src/nn/networks/: pretrained_dense_network.cpp  small_network.cpp  small_test_network.cpp  synced_network.cpp
tests/: cpp_mnist_prediction.cpp  mnist_resize_check.py  torch_mnist_prediction.py
trained_models/: mnist_small.pt
